fix: vercel SPA (Single Page Application) routing issue

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/gate/:path*",
       "destination": "https://bsky.app/gate/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
