--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     }
   },
   "scripts": {
+    "check-size": "echo \"Total:\" && du -sh web-build && echo \"JS bundles:\" && find web-build -name \"*.js\" -exec ls -lh {} \\; | awk '{print $5, $9}'",
     "prepare": "is-ci || husky install",
     "postinstall": "patch-package && yarn intl:compile-if-needed",
     "prebuild": "EXPO_NO_GIT_STATUS=1 expo prebuild --clean",
